--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,16 @@ button {
   line-height: 24px;
   letter-spacing: 4%;
 }
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
+.logo span {
+  color: #2e2f42;
+}
